[gd_scene load_steps=5 format=3 uid="uid://fwfch7tbk6j4"]

[ext_resource type="Texture2D" uid="uid://cl282gwrr1o4a" path="res://assets/ui/buttons/play.png" id="1_cj0vx"]
[ext_resource type="Script" uid="uid://dtdur3vgsfwc5" path="res://scenes/Kingdom.gd" id="1_h5qp7"]
[ext_resource type="Texture2D" uid="uid://lm30aibs7ft5" path="res://assets/ui/buttons/play_pressed.png" id="2_h5qp7"]
[ext_resource type="Resource" uid="uid://dgj0ijn5a6mxi" path="res://assets/kingdoms/Kingdom1/KingdomConfig.tres" id="3_kwx2l"]

[node name="Kingdom" type="Node3D"]
script = ExtResource("1_h5qp7")
kingdom_config = ExtResource("3_kwx2l")

[node name="UI" type="CanvasLayer" parent="."]

[node name="PlayButton" type="TextureButton" parent="UI"]
offset_left = 6.0
offset_top = 11.0
offset_right = 1030.0
offset_bottom = 1035.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("1_cj0vx")
texture_pressed = ExtResource("2_h5qp7")

[node name="BuildingTileContainer" type="MarginContainer" parent="UI"]
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 37.0
offset_top = -109.0
offset_right = -27.0
offset_bottom = -141.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 16

[node name="TileList" type="HBoxContainer" parent="UI/BuildingTileContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24
alignment = 1

[node name="LevelRoot" type="Node3D" parent="."]
